--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "handlebars": "^4.1.2",
-    "mysql": "^2.17.1"
+    "handlebars": "^4.7.6",
+    "mysql": "^2.17.1",
+    "npm-force-resolutions": "0.0.3"
   },
   "devDependencies": {}
 }
